# oauth2-playground-rs

./: .gitignore
authorization-server/: Cargo.toml
resource-server/: Cargo.toml
