[package]
name = "resource-server"
version = "0.1.0"
edition = "2021"
authors = ["Martin Goldhahn <mgoldhahn@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"actix-rt" = "2.3.0"
"actix-web" = "4.0.0-beta.8"
"serde" = { version = "1.0.130", features = ["derive"] }
"serde_json" = "1.0.68"
"chrono" = { version = "0.4.19", features = ["serde"] }
"uuid" = { version = "1.4.1", features = ["serde", "v4"] }
"env_logger" = "0.10.0"

